hphp/hack/test/typecheck/reactive/only_first_error/references_in_rx3.php.exp
File "references_in_rx3.php", line 6, characters 14-14:
An expression is expected here. (Parsing[1002])
