hphp/hack/test/typecheck/reactive/only_first_error/references_in_rx3.php
<?hh // partial

<<__Rx>>
function foo(): void {
  $foo = 'f';
  $z = call(&$foo); // bad
}

<<__Rx>>
function call($_) {}
